@@ -47,7 +47,9 @@ static struct argp_option options[] = {
   {"nosum",   'N', NULL,      0,
    N_("do not display initial header summary"), 0},
   {"print",   'p', NULL,      0, N_("print all mail to standard output"), 0},
-  {"read",    'r', NULL,      OPTION_ALIAS },
+  {"read",    NULL, NULL,      OPTION_ALIAS },
+  {"return-address", 'r', N_("ADDRESS"), 0,
+   N_("use address as the return address when sending mail"), 0},
   {"quit",    'q', NULL,      0,
    N_("cause interrupts to terminate program"), 0},
   {"subject", 's', N_("SUBJ"), 0,
@@ -117,8 +119,11 @@ parse_opt (int key, char *arg, struct argp_state *state)
       break;
       
     case 'p':
-    case 'r':
       util_cache_command (&command_list, "setq mode=print");
+      break;
+      
+    case 'r':
+      util_cache_command (&command_list, "set return-address=%s", arg);
       break;
       
     case 'q':
