@@ -215,6 +215,9 @@ struct mailvar_symbol mailvar_tab[] =
       MAILVAR_TYPEMASK (mailvar_type_string),
       N_("regexp for recognizing subject lines of reply messages"),
       set_replyregex },
+    { { "return-address" },
+      MAILVAR_TYPEMASK (mailvar_type_string),
+      N_("return address for outgoing messages") },
     { { "save", },
       MAILVAR_TYPEMASK (mailvar_type_boolean),
       N_("store aborted messages in the user's dead.file") },
