@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2012-07-19
+GNU mailutils NEWS -- history of user-visible changes. 2012-08-07
 Copyright (C) 2002-2012 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
@@ -149,6 +149,17 @@ The mail shell provides the following new escapes to handle attachments:
  ~^ N
     Delete Nth attachment.
 
+** mail: the -r option
+
+The meaning of the `-r' option has changed.  Now it introduces the
+return address to use when sending mail.  This is an incompatible
+change.
+
+The return address can also be set from the mail shell, by assigning
+to the `return-address' variable, e.g.:
+
+ set return-address "gray@gnu.org"
+    
 ** MH: improved compatibility with other implementations
 
 ** MH inc: new option --moveto
